Fix "Flowers bending under the wind" descr.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8529 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -897,7 +897,7 @@ no speed penalty for animating thousands of flowers in our test scene.
 \begin{figure}[H]
   \centering
   \includegraphics[width=3in]{flowers}
-  \caption{Flowers bending under the wind, by transforming then on GPU in object space.}
+  \caption{Flowers bending under the wind, transformed on GPU in object space.}
 \end{figure}
 
 We would like to emphasize that all the effects demonstrated here
