Add notes about OGRE, add citations for Sh.
Add commented our notes about OpenSceneGraph, Irrlicht, Blender Game Engine --- I didn't find there anything interesting to mention.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8533 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -37,3 +37,32 @@
   year = "2010",
   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi_vrml_extensions_shadow_maps.php\#section_texture_projective}"
 }
+
+@misc{ogre,
+  title = "{OGRE}",
+  author = "{OGRE}",
+  howpublished = "\url{http://www.ogre3d.org/}"
+}
+
+@misc{ogre:shader,
+  title = "{OGRE Wiki - RT Shader System}",
+  author = "{OGRE}",
+  howpublished = "\url{http://www.ogre3d.org/tikiwiki/RT+Shader+System&structure=Development}"
+}
+
+@misc{sh,
+  title = "{Sh: A high-level metaprogramming language for modern GPUs}",
+  author = "{Sh}",
+  howpublished = "\url{http://libsh.org/}"
+}
+
+%% Links to "Metaprogramming GPUs with Sh":
+%% http://www.amazon.com/Metaprogramming-GPUs-Sh-Stefanus-Toit/dp/1568812299
+%% http://books.google.com/books?id=8RX4RmFRLmgC&pg=PA79&lpg=PA79&dq=ShAttrib2f&source=bl&ots=IOxd1-BQLL&sig=AIPgFRmbodNpCLWmwk-QV5JUjVo&hl=pl&ei=EylRTe7RB8qeOsiQ1aQI&sa=X&oi=book_result&ct=result&resnum=7&ved=0CEkQ6AEwBg#v=onepage&q=ShAttrib2f&f=false
+
+@misc{sh:book,
+  title = "{Metaprogramming GPUs with Sh}",
+  author = "Stefanus Du Toit and Michael McCool",
+  publisher = "A K Peters/CRC Press",
+  year = "2004"
+}
