Drupal link, better OGRE bib.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8534 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -39,7 +39,7 @@
 }
 
 @misc{ogre,
-  title = "{OGRE}",
+  title = "{OGRE - Open Source 3D Graphics Engine}",
   author = "{OGRE}",
   howpublished = "\url{http://www.ogre3d.org/}"
 }
@@ -65,4 +65,10 @@
   author = "Stefanus Du Toit and Michael McCool",
   publisher = "A K Peters/CRC Press",
   year = "2004"
+}
+
+@misc{drupal,
+  title = "{Drupal - Open Source CMS}",
+  author = "{Drupal}",
+  howpublished = "\url{http://drupal.org/}"
 }
