--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -238,7 +238,7 @@ language code quickly, and the integration is built inside appropriate X3D nodes
 
 At the end, we would like to mention a solution from a completely
 different domain, that is surprisingly similar to ours in some ways.
-Drupal, an open-source CMS system written in PHP,
+Drupal \cite{drupal}, an open-source CMS system written in PHP,
 has a very nice system of modules. Each module
 can extend the functionality of the base system (or other module)
 by implementing a \textit{hook}, which is just a normal PHP function
