Rename PLUG_fragment_normal_eye to PLUG_fragment_eye_space, pass there also vertex. This is consistent with PLUG_vertex_eye_space.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8538 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1035,12 +1035,13 @@ Process the vertex and normal in eye (camera) space.
 \subsection{Fragment shaders plugs}
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
-void PLUG_fragment_normal_eye(
-  inout vec3 normal)
+void PLUG_fragment_eye_space(
+  const vec4 vertex_eye,
+  inout vec3 normal_eye)
 \end{Verbatim}
 
-Modify the normal in eye space, at fragment shader.
-This is where the traditional bump mapping work is done.
+Process the vertex and normal in eye space, at fragment shader.
+You can modify the normal vector here, this is useful for bump mapping.
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
 void PLUG_light_scale(
